<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Impetus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Impetus</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallary</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_posts">Add Post</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="category_arch">Architecture</string>
    <string name="category_bioSci">Biosciences</string>
    <string name="category_chemEng">Chemical Engineering</string>
    <string name="category_chem">Chemistry</string>
    <string name="category_civil">Civil Engineering</string>
    <string name="category_cs">Computer Science</string>
    <string name="category_bioTech">Department of Biotechnology</string>
    <string name="category_devStd">Development Studies</string>
    <string name="category_earthSci">Earth Sciences</string>
    <string name="category_econ">Economics</string>
    <string name="category_elecAndCom">Electrical and Computer Engineering</string>
    <string name="category_envSci">Environmental Sciences</string>
    <string name="category_healthInfo">Health Informatics</string>
    <string name="category_humanities">Humanities</string>
    <string name="category_mgtSci">Management Sciences</string>
    <string name="category_math">Mathematics</string>
    <string name="category_mechEng">Mechanical Engineering</string>
    <string name="category_meteorology">Meteorology</string>
    <string name="category_pharm">Pharmacy</string>
    <string name="category_physics">Physics</string>
    <string name="category_stats">Statistics</string>
    <string name="postedInText">Posted in:</string>
    <string name="skillsText">Skills:</string>
</resources>